--- a/style.css
+++ b/style.css
@@ -1,6 +1,16 @@
 body{
 
-background-color: blue;
+background-color: rgb(0, 0, 133);
 color: aliceblue;
 
 }
+h1{
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+ label{
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+ }
+
+ button{
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+ }
